--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -30,6 +30,7 @@
     "@angular-devkit/build-angular": "^16.1.5",
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
