Migracion SQL  a PostgreSQL

--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQL": "server=127.0.0.1;database=p6;user id=sa;password=KorthPRS17;TrustServerCertificate=True;Encrypt=false;Trusted_connection=false;pooling=true"
+    "PostgreSQL": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
