--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
+    "PostgreSQL": "Server=129.151.124.255;Port=5432;Database=BDv1;User Id=postgres;Password=sEVAj83YD88QjvA9JmKx2GSWRZjXU3rHHZuIgcNN;"
   },
   "Logging": {
     "LogLevel": {
