--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-   "PostgreSQL": "Server=129.151.124.255;Port=5432;Database=BDv6;User Id=postgres;Password=sEVAj83YD88QjvA9JmKx2GSWRZjXU3rHHZuIgcNN;"
+    "PostgreSQL": "Server=localhost;Port=5432;Database=BDv1postgres;User Id=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
