--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "jest-editor-support": "*",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "^16.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.3",
     "autoprefixer": "^10.4.14",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
