--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   webapp:
     build:
-      context: ./webapi/Dockerfile
+      context: ./webapi
       dockerfile: Dockerfile
     ports:
       - "80:80"
