--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^16.1.0",
     "jest-editor-support": "*",
     "leaflet": "^1.9.4",
+    "leaflet-editable": "^1.2.0",
+    "leaflet.path.drag": "^0.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -34,6 +36,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet-editable": "^1.2.2",
     "autoprefixer": "^10.4.15",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
