--- a/angularapp/angular.json
+++ b/angularapp/angular.json
@@ -66,7 +66,7 @@
           },
           "defaultConfiguration": "development",
           "options": {
-            "proxyConfig": "src/proxy.conf.js"
+            "proxyConfig": "src/proxy.conf.json"
           }
         },
         "extract-i18n": {
