--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -1,6 +1,13 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "Server=129.151.124.255;Port=5432;Database=BDv15;User Id=postgres;Password=sEVAj83YD88QjvA9JmKx2GSWRZjXU3rHHZuIgcNN;"
+    "PostgreSQL": "Server=129.151.124.255;Port=5432;Database=Sv2;User Id=postgres;Password=sEVAj83YD88QjvA9JmKx2GSWRZjXU3rHHZuIgcNN;"
+  },
+  "Kestrel": {
+    "Endpoints": {
+     "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
   },
   "Logging": {
     "LogLevel": {
