--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgreSQL": "Server=129.151.124.255;Port=5432;Database=Sv2;User Id=postgres;Password=sEVAj83YD88QjvA9JmKx2GSWRZjXU3rHHZuIgcNN;"
+    "SQL": "Server=132.145.217.201,1433;Database=test;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
