--- a/webapi/appsettings.Development.json
+++ b/webapi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQL": "Server=NITRO5\\SQLEXPRESS,1433;Database=P1;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
+    "SQL": "Server=NITRO5\\SQLEXPRESS,1433;Database=Sv2;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
