--- a/webapi/webapi.csproj
+++ b/webapi/webapi.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Update="Microsoft.NET.Build.Containers" Version="7.0.402" />
   </ItemGroup>
 
   <ItemGroup>
