--- a/angularapp/package.json
+++ b/angularapp/package.json
@@ -39,6 +39,7 @@
         "autoprefixer": "^10.4.15",
         "chroma-js": "^2.4.2",
         "crypto-js": "^4.1.1",
+        "exceljs": "^4.3.0",
         "highlight.js": "^11.8.0",
         "jasmine-core": "^5.1.1",
         "karma": "^6.4.2",
@@ -57,5 +58,9 @@
         "tslib": "^2.6.2",
         "typescript": "5.1.6",
         "zone.js": "^0.13.1"
+    },
+    "devDependencies": {
+        "@types/file-saver": "^2.0.5",
+        "file-saver": "^2.0.5"
     }
 }
