--- a/angularapp/tsconfig.json
+++ b/angularapp/tsconfig.json
@@ -14,10 +14,13 @@
         "target": "ES2022",
         "module": "ES2022",
         "useDefineForClassFields": false,
-        "lib": ["ES2022", "dom"]
+        "lib": [
+            "ES2022",
+            "dom"
+        ]
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
-        "strictTemplates": false
+        "strictTemplates": true
     }
 }
