--- a/angularapp/angular.json
+++ b/angularapp/angular.json
@@ -30,7 +30,9 @@
                             "crypto-js/hmac-sha256",
                             "crypto-js/enc-base64",
                             "flat",
-                            "quill"
+                            "quill",
+                            "exceljs",
+                            "file-saver"
                         ],
                         "assets": [
                             "src/favicon-16x16.png",
