--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQL": "Server=129.151.123.131;Database=BDSim;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
+    "SQL": "Server=129.151.123.131;Database=bdsimulacionmonfort;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
