--- a/angular.client/package.json
+++ b/angular.client/package.json
@@ -47,21 +47,21 @@
     "perfect-scrollbar": "^1.5.5",
     "postcss": "^8.4.28",
     "quill": "^1.3.7",
+    "run-script-os": "*",
     "rxjs": "^7.8.1",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
-    "typescript": "5.1.6",
-    "zone.js": "^0.13.1",
-    "run-script-os": "*"
+    "typescript": "^5.4.2",
+    "zone.js": "^0.14.4"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.5",
-    "file-saver": "^2.0.5",
     "@types/chroma-js": "^2.4.0",
     "@types/crypto-js": "^4.1.1",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "^4.3.5",
     "@types/lodash": "^4.14.197",
     "@types/lodash-es": "^4.17.8",
-    "@types/luxon": "^3.3.1"
+    "@types/luxon": "^3.3.1",
+    "file-saver": "^2.0.5"
   }
 }
