--- a/angular.client/package.json
+++ b/angular.client/package.json
@@ -39,6 +39,7 @@
         "ngx-quill": "24.0.2",
         "perfect-scrollbar": "1.5.5",
         "quill": "1.3.7",
+        "run-script-os": "^1.1.6",
         "rxjs": "7.8.1",
         "tslib": "2.6.2",
         "zone.js": "0.14.2"
