--- a/angular.Server/appsettings.json
+++ b/angular.Server/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "SQL": "Server=129.151.123.131;Database=TesisEBR;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
   },
+  "Jwt": {
+    "Issuer": "ii",
+    "Audience": "ii",
+    "SecretKey": "Buscando_Lo_Hallaras_Buscando_Lo_Hallaras_Buscando_Buscando_Y_Al_Fin_Lo_Encontraras"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
