--- a/angular.Server/appsettings.json
+++ b/angular.Server/appsettings.json
@@ -3,9 +3,9 @@
     "SQL": "Server=129.151.123.131;Database=TesisEBR;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
   },
   "Jwt": {
-    "Issuer": "ii",
-    "Audience": "ii",
-    "SecretKey": "Buscando_Lo_Hallaras_Buscando_Lo_Hallaras_Buscando_Buscando_Y_Al_Fin_Lo_Encontraras"
+    "Issuer": "https://localhost:5001",
+    "Audience": "Audience",
+    "SecretKey": "zyayeVySPkaOpUIzeutYSYlbLdpRr5Ym"
   },
   "Logging": {
     "LogLevel": {
