Cambio de BD y arreglos visuales (login)

--- a/angular.Server/appsettings.Development.json
+++ b/angular.Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SQL": "Server=129.151.123.131;Database=TesisEBR_LAST;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
+    "SQL": "Server=129.151.123.131;Database=TesisEBRv3;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
