--- a/angular.client/package.json
+++ b/angular.client/package.json
@@ -42,6 +42,7 @@
         "run-script-os": "^1.1.6",
         "rxjs": "7.8.1",
         "tslib": "2.6.2",
+        "xlsx": "^0.18.5",
         "zone.js": "0.14.2"
     },
     "devDependencies": {
