--- a/angular.Server/Properties/launchSettings.json
+++ b/angular.Server/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "AngularApp1.Server": {
+    "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
