Funciona todo bien, hasta ahora

--- a/angular.Server/appsettings.Development.json
+++ b/angular.Server/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+    "ConnectionStrings": {
+      "SQL": "Server=127.0.0.1,1433;Database=TesisEBR;User Id=sa;Password=KorthPRS17;TrustServerCertificate=true;"
+    },
+  "Jwt": {
+    "Issuer": "https://localhost:5001",
+    "Audience": "Audience",
+    "SecretKey": "zyayeVySPkaOpUIzeutYSYlbLdpRr5Ym"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
-  }
+    } 
+  },
+  "AllowedHosts": "*"
 }
