--- a/angular.client/package.json
+++ b/angular.client/package.json
@@ -27,18 +27,13 @@
         "@angular/platform-browser": "17.0.3",
         "@angular/platform-browser-dynamic": "17.0.3",
         "@angular/router": "17.0.3",
-        "@ngneat/transloco": "6.0.0",
-        "apexcharts": "3.44.0",
-        "crypto-js": "3.3.0",
+        "chroma-js": "^3.0.0",
         "exceljs": "^4.4.0",
         "file-saver": "^2.0.5",
-        "highlight.js": "11.9.0",
         "lodash-es": "4.17.21",
         "luxon": "3.4.4",
-        "ng-apexcharts": "1.8.0",
-        "ngx-quill": "24.0.2",
         "perfect-scrollbar": "1.5.5",
-        "quill": "1.3.7",
+        "quill": "^2.0.2",
         "run-script-os": "^1.1.6",
         "rxjs": "7.8.1",
         "tslib": "2.6.2",
@@ -50,16 +45,12 @@
         "@angular/cli": "17.0.1",
         "@angular/compiler-cli": "17.0.3",
         "@tailwindcss/typography": "0.5.10",
-        "@types/chroma-js": "2.4.3",
-        "@types/crypto-js": "3.1.47",
-        "@types/highlight.js": "10.1.0",
         "@types/jasmine": "5.1.2",
         "@types/lodash": "4.14.201",
         "@types/lodash-es": "4.17.11",
         "@types/luxon": "3.3.4",
         "@types/node": "^20.12.12",
         "autoprefixer": "10.4.16",
-        "chroma-js": "2.4.2",
         "karma": "6.4.2",
         "karma-chrome-launcher": "3.2.0",
         "karma-coverage": "2.2.1",
