--- a/angular.Server/appsettings.json
+++ b/angular.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "SQL": "Server=192.168.1.34,1433;Database=TestEmocional;User Id=sa;Password=Colegio202308;TrustServerCertificate=true;"
+      "SQL": "Server=129.151.123.131,1433;Database=TesisEBR;User Id=sa;Password=Jafetito1*;TrustServerCertificate=true;"
     },
   "Jwt": {
     "Issuer": "https://localhost:5001",
