chore: Actualizar configuración de base de datos en appsettings.json y appsettings.Development.json

--- a/angular.Server/appsettings.json
+++ b/angular.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "SQL": "Server=192.168.1.34,1433;Database=TestEmocional;User Id=sa;Password=Colegio202308;TrustServerCertificate=true;"
+      "SQL": "Server=127.0.0.1,1433;Database=TesisEBR;User Id=sa;Password=KorthPRS17;TrustServerCertificate=true;"
     },
   "Jwt": {
     "Issuer": "https://localhost:5001",
